k8s/config-files/deployment-example.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: k8s-helloworld
        image: wardviaene/k8s-demo
      ports:
      - name: helloworld-port
        containerPort: 3000
