k8s/config-files/label-pod-example.yml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld.db2dev.com
  labels:
    app: helloworld
spec:
  containers:
  - name: k8s-helloworld
    image: wardviaene/k8s-demo
    ports:
    - name: helloworld-port
      containerPort: 3000
  nodeSelector:
    hardware: high-spec
