k8s/config-files/secret-file-pod-example.yml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld.db2dev.com
  labels:
    app: helloworld
spec:
  containers:
  - name: k8s-helloworld
    image: wardviaene/k8s-demo
    ports:
    - name: helloworld-port
      containerPort: 3000
    volumeMounts:
      - name: credvolume
      mounthPath: /etc/creds
      readOnly: true
  volumes:
    - name: credvolume
    secret:
      secretName: db-secrets
