k8s/config-files/service-example.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 80
    targetPort: helloworld-port
    protocol: TCP
  selector:
    app: helloworld
  type: LoadBalancer
